# mcp

./: README.md
anthropic_api/: .env.example  README.md  claude_api.py  cli.py  pyproject.toml
cli_project/: .gitignore  README.md  mcp_client.py  mcp_server.py  pyproject.toml
fastmp_generated/: README.md  fastmcp.json  fastmcp_server.py  run_http.py  test_client.py
openai_api/: .env.example  CLAUDE.md  Makefile  README.md  example_usage.py  openai_cli.py  openai_client.py  pyproject.toml
openai_api/.claude/agents/: documentation-generator.md
openai_api/.claude/commands/: test.md
openai_api/.claude/output-styles/: emoji.md
quickstart-resources/weather-server-python/: README.md
